part1/main-application/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-application
  template:
    metadata:
      labels:
        app: main-application
    spec:
      volumes:
        - name: shared-text
          emptyDir: {}
      containers:
        - name: timestamp-generator
          image: hpkhanhloc/timestamp-generator:v0.1
          volumeMounts:
            - name: shared-text
              mountPath: /usr/src/app/files
        - name: timestamp-hash-printer
          image: hpkhanhloc/timestamp-hash-printer:v0.1
          volumeMounts:
            - name: shared-text
              mountPath: /usr/src/app/files
